Create masked input components (#86)
* Create masked input component

* Apply visual and behavioral improvements

* Apply adjustments to the masked inputs

* Apply the currency input mask to control inputs

* Clear input control value for correct mask operation

* Change mask lib for more frameworks compatibility

* Remove unnecessary class of previous lib

* Fix wrong lib reference on docs

* Improve query selection of the masked inputs

--- a/docs/inputs.mdx
+++ b/docs/inputs.mdx
@@ -70,6 +70,48 @@ To create the disabled state, add the `a-input--disabled` modifier class on elem
   </div>
 </Playground>
 
+## masked inputs
+
+Inputs that have a specific value structure for certain kinds of data.
+
+Masked inputs don't need specific CSS classes other than the main one shown below. However, they do need a [mask plugin](https://github.com/text-mask/text-mask) and custom JS to work on your project. You may find the code for this working example in our GitHub repository. If you decide to use Text Mask like we did, please follow the example to get the same results.
+
+<Playground className='two-columns'>
+  <div className='a-input'>
+    <input
+      id='inputdate'
+      type='text'
+      placeholder='DD/MM/YYYY'
+      aria-labelledby='labeldate'
+    />
+    <label id='labeldate' htmlFor='inputdate'>
+      Date
+    </label>
+  </div>
+  <div className='a-input'>
+    <input
+      id='inputmoney'
+      type='text'
+      placeholder='0,00'
+      aria-labelledby='labelmoney'
+    />
+    <label id='labelmoney' htmlFor='inputmoney'>
+      Money (R$)
+    </label>
+  </div>
+  <div className='a-input'>
+    <input
+      id='inputcpf'
+      type='text'
+      placeholder='000.000.000-00'
+      aria-labelledby='labelcpf'
+    />
+    <label id='labelcpf' htmlFor='inputcpf'>
+      CPF
+    </label>
+  </div>
+</Playground>
+
 ## text area inputs
 
 Text areas are used in contexts that demand long and descriptive texts.
@@ -122,13 +164,20 @@ These inputs are commonly used for money input data, in contexts that require in
 
 They carry outline [icon buttons](/docs-buttons#icon-buttons) and these will always add or subtract R$ 100 or R$ 1.000.
 
-The buttons will need JS to work on your project. You may find the code for this working example in our GitHub repository.
+The buttons will need JS to work on your project. You may find the code for this working example in our GitHub repository. We also used a plugin for the currency mask, as explained in the Masked Inputs section above.
 
 To create the disabled state, add the `a-input--disabled` modifier class on element root and `disabled` attribute on the `<input>` tag.
 
 <Playground className='two-columns'>
   <div className='a-input a-input--control'>
-    <input id='control1' type='number' data-step='100' defaultValue='0' />
+    <input
+      id='control1'
+      type='text'
+      data-step='100'
+      defaultValue='0,00'
+      placeholder='0,00'
+      aria-labelledby='controllabel1'
+    />
     <label id='controllabel1' htmlFor='control1'>
       Control input (R$)
     </label>
@@ -140,14 +189,26 @@ To create the disabled state, add the `a-input--disabled` modifier class on elem
     </button>
   </div>
   <div className='a-input a-input--control a-input--disabled'>
-    <input id='control2' type='number' data-step='100' disabled />
+    <input
+      id='control2'
+      type='text'
+      data-step='100'
+      aria-labelledby='controllabel2'
+      disabled
+    />
     <label id='controllabel2' htmlFor='control2'>
       Control input (R$)
     </label>
-    <button className='a-btn a-btn--ghost-uranus a-btn--small a-btn--icon a-input--control__decrement' disabled >
+    <button
+      className='a-btn a-btn--ghost-uranus a-btn--small a-btn--icon a-input--control__decrement'
+      disabled
+    >
       <i className='a-icon a-icon__input-dash a-icon--size-small' />
     </button>
-    <button className='a-btn a-btn--ghost-uranus a-btn--small a-btn--icon a-input--control__increment' disabled >
+    <button
+      className='a-btn a-btn--ghost-uranus a-btn--small a-btn--icon a-input--control__increment'
+      disabled
+    >
       <i className='a-icon a-icon__input-plus a-icon--size-small' />
     </button>
   </div>
