Update Iconography with new icons (#120)
Introduce following icons: dollars, floater, circle more and circle less.

--- a/docs/iconography.mdx
+++ b/docs/iconography.mdx
@@ -79,7 +79,11 @@ All icons have a 32x32px bound as default format. They can be resized in our 16p
     'house',
     'chart-up',
     'comparison',
-    'light'
+    'circle-more',
+    'circle-less',
+    'light',
+    'floater',
+    'dollars'
   ]}
 />
 
