Add Sketch files on project to download (#188)

--- a/docs/inputs.mdx
+++ b/docs/inputs.mdx
@@ -7,10 +7,13 @@ import '../src/index.css';
 import { Playground } from 'docz';
 import HandleInputEvents from './js/inputs';
 import MagnetisIcon from './img/magnetis-icon.png';
+import SketchLink from './components/SketchLink';
 
 # inputs
 
 #### Inputs appear when the user needs to input data. They are mostly used in forms and in contexts that require data such as money, text and numbers.
+
+<SketchLink file='Inputs' />
 
 ## standard text inputs
 
